--- a/src/tests/intel/CMakeLists.txt
+++ b/src/tests/intel/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_executable(test_numerical_limits test_numerical_limits.cpp)
+target_link_libraries(test_numerical_limits ${myLibs})
 
 # intel test do not make sense when using gcc
 # add_executable(test_intel_compiler test_intel_compiler.cpp)
