--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.3)
-project(tumorcode C CXX)
+project(tumorcode CXX)
+#add_definitions(-DMPICH_SKIP_MPICXX -DOMPI_SKIP_MPICXX)
 
 # I try to follow the tutorial at:
 # https://cmake.org/cmake-tutorial/
@@ -112,8 +113,10 @@ message("CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules/;")
 message("CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
 message("CMAKE_EXE_LINKER_FLAGS: ${CMAKE_EXE_LINKER_FLAGS}")
-message("TrilinosDIR: ${TrilinosDIR}")
 
+set (HDF5_DIR CACHE PATH "Provided module path for HDF5" )
+set (Trilinos_DIR CACHE PATH "Provided module path for Trilinos" )
+set (CGAL_DIR CACHE PATH "Provided module path for CGAL" )
 
 include(${CMAKE_ROOT}/Modules/CMakeDependentOption.cmake)
 option(BUILD_TESTS "build test directory" ON)
@@ -188,45 +191,52 @@ find_package(Eigen3 3.2 QUIET)
 #find_package(HDF5 1.8.10 REQUIRED)
 find_package(HDF5 REQUIRED COMPONENTS CXX)
 if(HDF5_IS_PARALLEL)
-  message(WARNING "your hdf5 is parallel, you probably need mpi")
+  message(WARNING "your hdf5 is parallel, you probably need to compile with mpic++")
 endif()
 find_package(LAPACK REQUIRED)
 find_package(BLAS REQUIRED)
 
 find_package(PNG REQUIRED)
 find_package(TBB REQUIRED)
-find_package(Trilinos REQUIRED)
+find_package(Trilinos REQUIRED COMPONENTS Belos)
+find_package(Trilinos REQUIRED COMPONENTS Epetra)
+
+#the find_package load some defaults, but they are too much
+#set(Trilinos_LIBRARIES "${Trilinos_LIBRARIES};belosepetra;ml")
+set(Trilinos_LIBRARIES "belos;belosepetra;ml")
+
+message(STATUS "Trilinos libs       	= ${Trilinos_LIBRARIES}")
 message(STATUS "Your Trilions depends on: ${Trilinos_TPL_LIST}")
 if (";${Trilinos_TPL_LIST};" MATCHES ";MPI;")
-  message(STATUS "MPI is NEEDED")
-  set(MPI_NEEDED TRUE)
+  message(STATUS "your trilinos depends on MPI")
+  #set(MPI_NEEDED TRUE)
 endif()
 
-if (MPI_NEEDED)
-  #set(MPI_CXX_COMPILER "/usr/bin/mpic++.openmpi") --> system dependent, move to do configure
-  find_package(MPI REQUIRED)
-  add_definitions(-DMPI_NEEDED)
-  message(STATUS "Including MPI")
-  message(STATUS "MPI cxx libs         = ${MPI_CXX_LIBRARIES}")
-  #message(STATUS "MPI libs         = ${MPI_LIBRARIES}") # depricated
-  message(STATUS "MPI include dirs = ${MPI_CXX_INCLUDE_PATH}")
-  #message(STATUS "MPI_LIBRARY = ${MPI_LIBRARY}") #depricated
-  message(STATUS "MPI_CXX_COMPILER_FLAGS = ${MPI_CXX_COMPILER_FLAGS}")
-  message(STATUS "MPI_CXX_LINK_FLAGS = ${MPI_CXX_LINK_FLAGS}")
-  #message(STATUS "MPI_COMPILE_FLAGS = ${MPI_COMPILE_FLAGS}") #depricated
-  #message(STATUS "MPI_LINK_FLAGS = ${MPI_LINK_FLAGS}") #depricated
-  SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${MPI_CXX_COMPILER_FLAGS}" )
-  set( CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} ${MPI_CXX_LINK_FLAGS}")
-  include_directories(${MPI_CXX_INCLUDE_PATH})
-  #include_directories(${MPI_INCLUDE_PATH})
-  #set(myLibs ${MPI_CXX_LIBRARIES})
-  set(myLibs "${myLibs};${MPI_LIBRARIES};${MPI_CXX_LIBRARY}")
-  if (HDF5_IS_PARALLEL) #good here
-  message(WARNING "good choice here")
-  else()
-  message(WARNING "You are using trilinos with mpi support and hdf5 without, do you know what you are doing?")
-  endif()
-endif()
+# if (MPI_NEEDED)
+#   #set(MPI_CXX_COMPILER "/usr/bin/mpic++.openmpi") --> system dependent, move to do configure
+#   find_package(MPI REQUIRED)
+#   add_definitions(-DMPI_NEEDED)
+#   message(STATUS "Including MPI")
+#   message(STATUS "MPI cxx libs         = ${MPI_CXX_LIBRARIES}")
+#   #message(STATUS "MPI libs         = ${MPI_LIBRARIES}") # depricated
+#   message(STATUS "MPI include dirs = ${MPI_CXX_INCLUDE_PATH}")
+#   #message(STATUS "MPI_LIBRARY = ${MPI_LIBRARY}") #depricated
+#   message(STATUS "MPI_CXX_COMPILER_FLAGS = ${MPI_CXX_COMPILER_FLAGS}")
+#   message(STATUS "MPI_CXX_LINK_FLAGS = ${MPI_CXX_LINK_FLAGS}")
+#   #message(STATUS "MPI_COMPILE_FLAGS = ${MPI_COMPILE_FLAGS}") #depricated
+#   #message(STATUS "MPI_LINK_FLAGS = ${MPI_LINK_FLAGS}") #depricated
+#   SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${MPI_CXX_COMPILER_FLAGS}" )
+#   set( CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} ${MPI_CXX_LINK_FLAGS}")
+#   include_directories(${MPI_CXX_INCLUDE_PATH})
+#   #include_directories(${MPI_INCLUDE_PATH})
+#   #set(myLibs ${MPI_CXX_LIBRARIES})
+#   set(myLibs "${myLibs};${MPI_LIBRARIES};${MPI_CXX_LIBRARY}")
+#   if (HDF5_IS_PARALLEL) #good here
+#   message(WARNING "good choice here")
+#   else()
+#   message(WARNING "You are using trilinos with mpi support and hdf5 without, do you know what you are doing?")
+#   endif()
+# endif()
 
 #from cmake 2.8 module documentation:
 #The Python_ADDITIONAL_VERSIONS variable can be used to specify a list of version numbers that should be # taken into account when searching for Python. You need to set this variable before calling find_package(PythonLibs).
@@ -300,7 +310,7 @@ message(STATUS "Trilinos include dirs 	= ${Trilinos_INCLUDE_DIRS}")
 
 include_directories(${PYTHON_INCLUDE_DIRS})
 include_directories(${Trilinos_INCLUDE_DIRS})
-link_directories(${Trilinos_LIBRARY_DIRS})
+#link_directories(${Trilinos_LIBRARY_DIRS})
 include_directories(${HDF5_INCLUDE_DIRS})
 link_directories(${HDF5_LIBRARY_DIRS})
 include_directories(${Boost_INCLUDE_DIRS})
